# py-http-retry

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_http_retry/: __init__.py
tests/: test_http_retry.py
