[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-http-retry"
version = "0.1.0"
description = "Resilient HTTP client with automatic retries and backoff."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["http", "retry", "backoff", "resilient", "request"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-http-retry"
Repository = "https://github.com/philiprehberger/py-http-retry"
Issues = "https://github.com/philiprehberger/py-http-retry/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_http_retry"]
